# RosterPilot

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  DEPLOYMENT.md  ENVIRONMENT_VARIABLES.md  LICENSE  PYESPN_NOTES.md  README.md  SCAFFOLD_PHASE_PLAN.md  devstartup.sh  fetch-uniforms.ts  mypy.ini  package-lock.json  package.json  ruff.toml  split_uniforms.py
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  cli.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  games.py  health.py  leagues.py  me.py  meta.py  oauth.py
backend/app/clients/: __init__.py  pyespn.py  redis.py  yahoo.py
backend/app/core/: config.py  metrics.py  rate_limiter.py
backend/app/db/: session.py
backend/app/dependencies/: __init__.py  auth.py  database.py  rate_limit.py  redis.py  settings.py
backend/app/jobs/: __init__.py  reference.py
backend/app/jobs/data/: canonical_players.json  reference_data.json
backend/app/models/: __init__.py  base.py  espn.py  projection.py  user.py  yahoo.py
backend/app/optimizer/: __init__.py  engine.py  models.py  rules.py
backend/app/schemas/: __init__.py  games.py  health.py  leagues.py  runtime.py  ws.py
backend/app/security/: crypto.py  state.py
backend/app/services/: __init__.py  auth.py  canonical.py  games.py  leagues.py  models.py
backend/app/services/pyespn/: __init__.py  ingest.py
backend/app/services/yahoo/: fixtures.py  ingest.py  models.py
backend/app/ws/: __init__.py  games.py
backend/migrations/: README.md  env.py  script.py.mako
backend/migrations/versions/: 20251023_0001_initial_schema.py  20251023_0002_yahoo_ingest_expansion.py  20251023_0003_pyespn_ingest.py  20251023_0004_canonical_mapping_seed.py
backend/tests/: README.md  conftest.py
backend/tests/contract/: test_api_contracts.py
backend/tests/fixtures/pyespn/: __init__.py  (+2 more)
backend/tests/integration/: test_oauth.py  test_realtime.py  test_security.py
backend/tests/unit/: test_config.py  test_metrics.py  test_optimizer.py  test_pyespn_ingest.py  test_rate_limiter.py  test_reference_seed.py
(+64 files in other folders)
