[tool.poetry]
name = "rosterpilot-backend"
version = "0.1.0"
description = "FastAPI backend for the RosterPilot Yahoo + PyESPN companion"
authors = ["RosterPilot Engineering <dev@rosterpilot.com>"]
packages = [{ include = "app" }]
readme = "../README.md"
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
fastapi = "0.120.0"
uvicorn = { extras = ["standard"], version = "0.30.3" }
pydantic-settings = "2.5.2"
sqlalchemy = "2.0.31"
alembic = "1.13.2"
httpx = "0.27.2"
redis = "5.0.8"
python-dotenv = "1.0.1"
sentry-sdk = { extras = ["fastapi"], version = "1.45.1" }
opentelemetry-sdk = "1.38.0"
opentelemetry-instrumentation-fastapi = "0.59b0"
opentelemetry-instrumentation-httpx = "0.59b0"
opentelemetry-exporter-gcp-trace = "1.10.0"
cryptography = "44.0.1"
itsdangerous = "2.2.0"
pyespn = "0.3.3"
ortools = "9.10.4067"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.4"
pytest-asyncio = "0.23.8"
httpx = { version = "0.27.2", extras = ["cli"] }
ruff = "0.5.7"
mypy = "1.10.1"
pytest-cov = "5.0.0"
respx = "0.21.1"
pip-audit = "2.7.3"

[tool.poetry.scripts]
rp-env-check = "app.cli:check_environment"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
